[gd_scene load_steps=6 format=3 uid="uid://ds0s6dw8skubu"]

[ext_resource type="Theme" uid="uid://f1t8okxjimt2" path="res://ui/base_theme.tres" id="1_yv2ts"]
[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="2_f8cr8"]
[ext_resource type="AudioStream" uid="uid://cpx8e7r35ai84" path="res://assets/compfest/sfx/button-305770.wav" id="3_oecy5"]
[ext_resource type="Texture2D" uid="uid://mrsnjax47qu1" path="res://assets/compfest/Menus/Resume (1).png" id="4_4i5hn"]
[ext_resource type="PackedScene" uid="uid://bac06arj7ahsa" path="res://component/random_stream_player_component.tscn" id="5_vkalq"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yv2ts")
script = ExtResource("2_f8cr8")
audio_select = ExtResource("3_oecy5")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_4i5hn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 256)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.992157, 0.960784, 1)
theme_override_colors/font_outline_color = Color(0.0705882, 0.109804, 0.160784, 1)
theme_override_constants/outline_size = 33
theme_override_font_sizes/font_size = 128
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 32

[node name="resume_button" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../home_button")
focus_neighbor_bottom = NodePath("../restart_button")
theme_override_font_sizes/font_size = 128
text = "RESUME"

[node name="restart_button" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume_button")
focus_neighbor_bottom = NodePath("../home_button")
theme_override_font_sizes/font_size = 128
text = "RESTART"

[node name="home_button" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../restart_button")
focus_neighbor_bottom = NodePath("../resume_button")
theme_override_font_sizes/font_size = 128
text = "HOME"

[node name="RandomStreamPlayerComponent" parent="." instance=ExtResource("5_vkalq")]
streams = Array[AudioStream]([ExtResource("3_oecy5")])
randomize_pitch = false
